Added results endpoint

--- a/choice-coin-entry/templates/head.html
+++ b/choice-coin-entry/templates/head.html
@@ -1,8 +1,8 @@
-<nav class="navbar">
+<nav class="navbar ">
   <div class="container">
     <div class="navbar-brand">
       <a class="navbar-item" href="../">
-        <img src="../images/bulma.png" alt="Logo" />
+        <img src="https://siasky.net/EAD8NJMejpi-MCtxdtuxtyS6xYdKPtoX55mslejYCQyl_w" alt="Logo" />
       </a>
       <span class="navbar-burger burger" data-target="navbarMenu">
         <span></span>
@@ -27,7 +27,7 @@
             <a class="navbar-item" href="/corporate/admin/start">Start Vote</a>
             <a class="navbar-item" href="/corporate/admin/end">End Vote</a>
             <hr class="navbar-divider" />
-<a href="{{ url_for("adminLogOut") }}"><div class="navbar-item" >Logout</div></a>
+            <a href="{{ url_for("adminLogOut") }}"><div class="navbar-item" >Logout</div></a>
           </div>
         </div>
       </div>
