--- a/choice-coin-entry/templates/test.html
+++ b/choice-coin-entry/templates/test.html
@@ -1,29 +1,67 @@
-{% for i in projects %}
-<div class="column is-4">
-    <div class="card is-shady">
-      <div class="card-image">
-        <figure class="image is-4by3">
-          <img
-            src="../static/uploads/{{i.image}}"
-            alt="Placeholder image"
-            class="modal-button"
-            data-target="modal-image2"
-          />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="content">
-          <h4>{{i.title}}</h4>
-          <p>
-           {{i.description}}
-          </p>
-          <span
-            class="button is-link modal-button"
-            data-target="modal-image2"
-            >Vote</span
-          >
-        </div>
-      </div>
-    </div>
-  </div>
-{% endfor %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Chart.js tutorial</title>
+    <link rel="stylesheet" href="../static/css/chart.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/15181efa86.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"
+    />
+  </head>
+  <body>
+    {% include 'head.html' %}
+
+    <canvas id="myChart" width="800" height="400"></canvas>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
+    <script>
+      var ctx = document.getElementById("myChart");
+
+      var stars = [135850, 52122, 148825, 16939, 9763];
+      var frameworks = ["React", "Angular", "Vue", "Hyperapp", "Omi"];
+
+      var myChart = new Chart(ctx, {
+        type: "pie",
+        data: {
+          labels: frameworks,
+          datasets: [
+            {
+              label: "Github Stars",
+              data: stars,
+              backgroundColor: [
+                "rgba(255, 99, 132, 0.2)",
+                "rgba(54, 162, 235, 0.2)",
+                "rgba(255, 206, 86, 0.2)",
+                "rgba(75, 192, 192, 0.2)",
+                "rgba(153, 102, 255, 0.2)",
+              ],
+              borderColor: [
+                "rgba(255, 99, 132, 1)",
+                "rgba(54, 162, 235, 1)",
+                "rgba(255, 206, 86, 1)",
+                "rgba(75, 192, 192, 1)",
+                "rgba(153, 102, 255, 1)",
+              ],
+              borderWidth: 1,
+            },
+          ],
+        },
+        options: {
+          maintainAspectRatio: false,
+          responsive: false,
+        },
+      });
+    </script>
+  </body>
+</html>
