--- a/choice-coin-entry/templates/createExecutives.html
+++ b/choice-coin-entry/templates/createExecutives.html
@@ -79,7 +79,7 @@
                         <option>Choose Executive's Position</option>
                         <option value="CEO">CEO</option>
                         <option value="CTO">CTO</option>
-                        <option value="Employee">Employee</option>
+                        <option value="Staff">Staff</option>
                       </select>
                     </div>
                   </div>
