--- a/choice-coin-entry/templates/head.html
+++ b/choice-coin-entry/templates/head.html
@@ -13,7 +13,8 @@
     <div id="navbarMenu" class="navbar-menu">
       <div class="navbar-end">
         <a class="navbar-item is-active" href="/">Home</a>
-        <a class="navbar-item" href="/corporate/poll">Vote</a>
+        <a class = "navbar-item is-active" href="/corporate/voter/login">Voter - Login</a>
+        <a class="navbar-item" href="/corporate/poll">Voter - Vote</a>
         <a class="navbar-item" href="/corporate/about">About</a>
         <a class="navbar-item" href="/corporate/contact">Contact Us</a>
         <a class="navbar-item">Help</a>
