--- a/choice-coin-entry/templates/adminSignUp.html
+++ b/choice-coin-entry/templates/adminSignUp.html
@@ -28,12 +28,13 @@
           <div class="columns">
             <div class="column left">
               <h1 class="title is-1">Choice Coin</h1>
-              <h2 class="subtitle colored is-4"><em>A democratic token for a new era.</em></h2>
-              <p> colored is-4"><em>A democratic token for a new era.</em></h2>
-                <p>
-                  A governance token that powers the Fortior Voting Protocol,
-                  which leverages Artificial Intelligence and Quantum Computing to
-                  voting algorithms that are secure, efficient, and equitable.
+              <h2 class="subtitle colored is-4">
+                <em>A democratic token for a new era.</em>
+              </h2>
+              <p>
+                A governance token that powers the Fortior Voting Protocol,
+                which leverages Artificial Intelligence and Quantum Computing to
+                voting algorithms that are secure, efficient, and equitable.
               </p>
             </div>
             <div class="column right has-text-centered">
